# path-tracing

./: CMakeLists.txt  README.md
assets/: ModelLoader.drawio  pathTracing.drawio
models/cornellbox-tc/: cornell-box.mtl  cornell-box.xml
models/stairscase/: stairscase.mtl  stairscase.xml
models/veachmis/: veach-mis.mtl
src/: Light.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/common/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  Light.cpp  Ray.h  Timer.h  utils.cpp  utils.h
src/objects/: HitPayload.h  Material.cpp  Material.h  MeshTriangles.cpp  MeshTriangles.h  ModelLoader.cpp  ModelLoader.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
tests/: testAABB.cpp  testBVH.cpp  testBVHCornellBox.cpp  testBVHRender.cpp  testBunny.cpp  testCastRay.cpp  testCornellBox.cpp  testDebug.cpp  testGlassMaterial.cpp  testLoader.cpp  testObject.cpp  testRender.cpp  testStairscase.cpp  testTrace.cpp  testUtils.cpp  testXml.cpp
tests/basic/: testCastRay.cpp  testTrace.cpp  testTriangle.cpp  testUtils.cpp
tests/scenes/: testCornell.cpp  testStairscase.cpp  testVeach.cpp
